[project]
name = "rlplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.1",
    "ipykernel>=6.30.1",
    "jaxmarl>=0.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pettingzoo>=1.25.0",
    "sb3-contrib>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
]
